test/src/e2e_vm_tests/test_programs/should_fail/asm_assign_to_initialized_reg/src/main.sw
script;

fn main() -> u64 {
    asm(r1: 0, r2: 0, r3, r4) {
        move r1 r2;
        move r2 r1;
        move r3 r1;
        move r4 r2;
    };
    0
}
